Added img classes again
Harold is back

--- a/company.html
+++ b/company.html
@@ -118,32 +118,32 @@
     <!--First row-->
     <div class="row">
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
@@ -151,32 +151,32 @@
     <!-- Second row-->
     <div class="row">
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
       <div class="col-2">
-        <img src="">
+        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Name</h3>
         <p>Description</p>
       </div>
