--- a/contact.html
+++ b/contact.html
@@ -221,5 +221,8 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+<!--JS Scripts-->
+<script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
+<script type="text/javascript" src="./assets/js/request.js"></script> <!--JSON API request JS-->
 
 </html>
