Added md to footer

--- a/contact.html
+++ b/contact.html
@@ -201,17 +201,17 @@
 
   <!--Footer-->
   <footer class="row">
-    <div class="col-3">
+    <div class="col-md-3">
       <h3>About us</h3>
       <p>What we do</p>
       <p>Who we are</p>
     </div>
-    <div class="col-3">
+    <div class="col-md-3">
       <h3>About you</h3>
       <p>Customers</p>
       <p>Latest</p>
     </div>
-    <div class="col-3">
+    <div class="col-md-3">
       <h3>Address</h3>
       <p>Google Street 2.</p>
       <p>526 42 Googleville</p>
