--- a/contact.html
+++ b/contact.html
@@ -77,21 +77,23 @@
   <!--Information articles section-->
   <section class="row">
     <article class="col-3">
-      <h4>Test</h4>
-      <p>Information 1</p>
-      <p>Information 2</p>
+      <h4>General inquiries</h4>
+      <p>info@googlenews.com</p>
+      <p>+846 795 85 96</p>
     </article>
     <article class="col-3">
-      <h4>Test</h4>
-      <p>Information 1</p>
-      <p>Information 2</p>
+      <h4>New business</h4>
+      <p>Melissa Humble</p>
+      <p>melissa.humble@googlenews.com</p>
     </article>
     <article class="col-3">
-      <h4>Test</h4>
-      <p>Information 1</p>
-      <p>Information 2</p>
+      <h4>Careers</h4>
+      <p>job@googlenews.com</p>
+      <p>internship@googlenews.com</p>
     </article>
-    <div class="row-3"></div>
+    <div class="row-3">
+      <article><img src="Tumblr.png"><img src="LinkedIn.png"><img src="Vector.png"></article>
+    </div>
   </section>
   <!--End of Information articles section-->
 
