Changed img class

--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
     <!--First row-->
     <div class="row">
       <div class="col-2">
-        <img class="img-portrait" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
+        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
@@ -145,22 +145,22 @@
         <p>Creative Director</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
+        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
+        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
+        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
+        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
         <h3>Diego Kahn</h3>
         <p>Creatice Director</p>
       </div>
@@ -168,27 +168,27 @@
     <!-- Second row-->
     <div class="row">
       <div class="col-2">
-        <img class="img-portrait" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
+        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
+        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
+        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
+        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
+        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
