Changed 2 class names

--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
+        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
@@ -193,7 +193,7 @@
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
+        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
