Changed row to column for icons

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
       <p>job@googlenews.com</p>
       <p>internship@googlenews.com</p>
     </article>
-    <div class="row-3">
+    <div class="col-3">
       <article><img src="Tumblr.png"><img src="LinkedIn.png"><img src="Vector.png"></article>
     </div>
   </section>
