Added text and links

--- a/company.html
+++ b/company.html
@@ -105,7 +105,7 @@
         </article>
     </section>
         <!--End of Our Story-->
-    
+
   <!--Divider-->
   <div>
     <hr>
@@ -119,66 +119,66 @@
     <div class="row">
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Melissa Humble</h3>
+        <p>CEO</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Diego Kahn</h3>
+        <p>Creative Director</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Melissa Humble</h3>
+        <p>CEO</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Diego Kahn</h3>
+        <p>Creative Director</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Melissa Humble</h3>
+        <p>CEO</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Diego Kahn</h3>
+        <p>Creative Director</p>
       </div>
     </div>
     <!-- Second row-->
     <div class="row">
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Melissa Humble</h3>
+        <p>CEO</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Diego Kahn</h3>
+        <p>Creative Director</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Melissa Humble</h3>
+        <p>CEO</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Diego Kahn</h3>
+        <p>Creative Director</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Melissa Humble</h3>
+        <p>CEO</p>
       </div>
       <div class="col-2">
         <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
-        <h3>Name</h3>
-        <p>Description</p>
+        <h3>Diego Kahn</h3>
+        <p>Creative Director</p>
       </div>
     </div>
   </section>
@@ -186,25 +186,22 @@
 
   <!--Footer-->
   <footer class="row">
-    <div class="col-3">
+    <div class="col-md-3">
       <h3>About us</h3>
-      <p>Blaha</p>
-      <p>Blaha</p>
+      <p>What we do</p>
+      <p>Who we are</p>
     </div>
-
-    <div class="col-3">
+    <div class="col-md-3">
       <h3>About you</h3>
-      <p>Blaha</p>
-      <p>Blaha</p>
+      <p>Customers</p>
+      <p>Latest</p>
     </div>
-
-    <div class="col-3">
+    <div class="col-md-3">
       <h3>Address</h3>
-      <p>Blaha</p>
-      <p>Blaha</p>
+      <p>Google Street 2.</p>
+      <p>526 42 Googleville</p>
     </div>
-
-</footer>
+  </footer>
   <!--End of Footer-->
 
 </body>
