--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
           <a href="/Offerings">What we do</a>
         </li>
         <li>
-          <a href="/About-us">Who we are</a>
+          <a href="company.html">Who we are</a>
         </li>
         <li>
           <a href="/Customers">Customers</a>
