Fixed Iframe center
changed css and removed style code from HTML

--- a/contact.html
+++ b/contact.html
@@ -101,24 +101,9 @@
   <div class="mapouter col-12">
     <div class="gmap_canvas"><iframe width="2000" height="287" id="gmap_canvas"
         src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed"
-        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-        href="https://123movies-to.org"></a><br>
-      <style>
-        .mapouter {
-          position: relative;
-          text-align: right;
-          height: 287px;
-          width: 2000px;
-        }
-      </style><a href="https://www.embedgooglemap.net"></a>
-      <style>
-        .gmap_canvas {
-          overflow: hidden;
-          background: none !important;
-          height: 287px;
-          width: 1181px;
-        }
-      </style>
+        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <a href="https://123movies-to.org"></a><br>
+        <a href="https://www.embedgooglemap.net"></a>
     </div>
   </div>
   <!--End of Map-->
