--- a/company.html
+++ b/company.html
@@ -118,32 +118,32 @@
     <!--First row-->
     <div class="row">
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
@@ -151,32 +151,32 @@
     <!-- Second row-->
     <div class="row">
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Melissa Humble</h3>
         <p>CEO</p>
       </div>
       <div class="col-2">
-        <img class="img-portrait" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
+        <img class="portrait__img" src="https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg">
         <h3>Diego Kahn</h3>
         <p>Creative Director</p>
       </div>
