Added margins and imgs

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,10 @@
       src="https://upload.wikimedia.org/wikipedia/commons/3/32/Googleplex_HQ_%28cropped%29.jpg">
   </section>
 
-  <section class="col-12">
+  <div class="page-content">
+
+
+  <section class="contact-title-container col-12">
     <h2>Get in touch!</h2>
   </section>
 
@@ -91,8 +94,8 @@
       <p>job@googlenews.com</p>
       <p>internship@googlenews.com</p>
     </article>
-    <div class="col-3">
-      <article><img src="Tumblr.png"><img src="LinkedIn.png"><img src="Vector.png"></article>
+    <div class="contact-icons-container col-3">
+      <img src="Tumblr.png"><img src="LinkedIn.png"><img src="Vector.png">
     </div>
   </section>
   <!--End of Information articles section-->
@@ -115,77 +118,82 @@
   <!-- End of Divider-->
 
   <!--"Meet the team" section-->
-  <section class="row-12">
-    <h2>Meet the team</h2>
+  <section class="meet-team-container row-12">
+    <h2 class="meet-team-title-container">Meet the team</h2>
     <!--First row-->
     <div class="row">
       <div class="col-2">
-        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
-        <h3>Melissa Humble</h3>
+        <img class="portrait__img" src="https://images.pexels.com/photos/697509/pexels-photo-697509.jpeg">
+        <h3>Big CEO man</h3>
         <p>CEO</p>
       </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
-        <h3>Diego Kahn</h3>
-        <p>Creative Director</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
-        <h3>Melissa Humble</h3>
-        <p>CEO</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
-        <h3>Diego Kahn</h3>
-        <p>Creative Director</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
-        <h3>Melissa Humble</h3>
-        <p>CEO</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
-        <h3>Diego Kahn</h3>
-        <p>Creatice Director</p>
-      </div>
+ 
+    <div class="col-2">
+      <img class="portrait__img" src="https://images.pexels.com/photos/3619947/pexels-photo-3619947.jpeg">
+      <h3>Chad</h3>
+      <p>PO</p>
     </div>
+    <div class="col-2">
+      <img class="portrait__img" src="https://images.pexels.com/photos/8154157/pexels-photo-8154157.jpeg">
+      <h3>Karima Garis</h3>
+      <p>CTO</p>
+    </div>
+      <div class="col-2">
+        <img class="portrait__img" src="https://images.pexels.com/photos/7989139/pexels-photo-7989139.jpeg">
+        <h3>Numbers guy</h3>
+        <p>Finacial Director</p>
+      </div>
+      <div class="col-2">
+        <img class="portrait__img" src="https://images.pexels.com/photos/7394562/pexels-photo-7394562.jpeg">
+        <h3>Karen</h3>
+        <p>HR</p>
+      </div>
+      <div class="col-2">
+        <img class="portrait__img" src="https://images.pexels.com/photos/756484/pexels-photo-756484.jpeg">
+        <h3>Bob</h3>
+        <p>HR</p>
+    </div>
+  </div>
     <!-- Second row-->
     <div class="row">
       <div class="col-2">
-        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
-        <h3>Melissa Humble</h3>
-        <p>CEO</p>
+        <img class="portrait__img" src="https://images.pexels.com/photos/4775198/pexels-photo-4775198.jpeg">
+        <h3>Saga</h3>
+        <p>Senior UX Designer</p>
       </div>
       <div class="col-2">
-        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
-        <h3>Diego Kahn</h3>
-        <p>Creative Director</p>
+        <img class="portrait__img" src="https://images.pexels.com/photos/4571276/pexels-photo-4571276.jpeg">
+        <h3>Johnny</h3>
+        <p>Senior Graphical Designer</p>
       </div>
       <div class="col-2">
-        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
-        <h3>Melissa Humble</h3>
-        <p>CEO</p>
+        <img class="portrait__img" src="https://images.pexels.com/photos/2698935/pexels-photo-2698935.jpeg">
+        <h3>Al'n Berto</h3>
+        <p>Front-end Developer</p>
       </div>
       <div class="col-2">
-        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
-        <h3>Diego Kahn</h3>
-        <p>Creative Director</p>
+        <img class="portrait__img" src="https://images.pexels.com/photos/897817/pexels-photo-897817.jpeg">
+        <h3>Trevor Tired</h3>
+        <p>Full-stack Developer</p>
       </div>
       <div class="col-2">
-        <img class="portrait__img" src="https://previews.123rf.com/images/zoomteam/zoomteam1212/zoomteam121200316/16854767-portrait-of-a-beautiful-young-woman-wearing-glasses.jpg">
-        <h3>Melissa Humble</h3>
-        <p>CEO</p>
+        <img class="portrait__img" src="https://images.pexels.com/photos/3791136/pexels-photo-3791136.jpeg">
+        <h3>Sarah Slumber</h3>
+        <p>Senior Back-end Developer</p>
       </div>
       <div class="col-2">
-        <img class="portrait__img" src="https://st.depositphotos.com/2069323/2156/i/600/depositphotos_21568765-stock-photo-casual-businessman-pointing.jpg">
-        <h3>Diego Kahn</h3>
-        <p>Creative Director</p>
+        <img class="portrait__img" src="https://images.pexels.com/photos/5778562/pexels-photo-5778562.jpeg">
+        <h3>Christina</h3>
+        <p>Social Media Manager</p>
       </div>
     </div>
   </section>
   <!-- End of "Meet the team" section-->
 
+
+<div>
+  <hr>
+</div>
   <!--Footer-->
   <footer class="row">
     <div class="col-md-3">
@@ -203,8 +211,12 @@
       <p>Google Street 2.</p>
       <p>526 42 Googleville</p>
     </div>
+    <div class="col-md-3">
+      <p><b>Copyright 2022 Google News</b></p>
+    </div>
   </footer>
   <!--End Footer-->
+</div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
