Removed body padding, footer and other

--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
     </div>
   </div>
     <!-- Second row-->
-    <div class="row">
+    <div class="meet-team-container__second row">
       <div class="col-2">
         <img class="portrait__img" src="https://images.pexels.com/photos/4775198/pexels-photo-4775198.jpeg">
         <h3>Saga</h3>
@@ -211,7 +211,7 @@
       <p>Google Street 2.</p>
       <p>526 42 Googleville</p>
     </div>
-    <div class="col-md-3">
+    <div class="footer-copyright col-md-3">
       <p><b>Copyright 2022 Google News</b></p>
     </div>
   </footer>
