Changed current title

--- a/company.html
+++ b/company.html
@@ -34,7 +34,7 @@
           <a href="/Offerings">What we do</a>
         </li>
         <li>
-          <a href="/About-us">Who we are</a>
+          <a href="/About-us class="current"">Who we are</a>
         </li>
         <li>
           <a href="/Customers">Customers</a>
@@ -49,7 +49,7 @@
           <a href="index.html">Latest</a>
         </li>
         <li>
-          <a href="contact.html" class="current">Contact</a>
+          <a href="contact.html">Contact</a>
         </li>
         <li class="search">
           <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles"
@@ -124,7 +124,7 @@
         <h3>Big CEO man</h3>
         <p>CEO</p>
       </div>
- 
+
     <div class="col-2">
       <img class="portrait__img" src="https://images.pexels.com/photos/3619947/pexels-photo-3619947.jpeg">
       <h3>Chad</h3>
