Fixed active in navbar

--- a/company.html
+++ b/company.html
@@ -34,7 +34,7 @@
           <a href="/Offerings">What we do</a>
         </li>
         <li>
-          <a href="/About-us class="current"">Who we are</a>
+          <a href="/About-us" class="current">Who we are</a>
         </li>
         <li>
           <a href="/Customers">Customers</a>
