Added padding footer

--- a/company.html
+++ b/company.html
@@ -72,7 +72,7 @@
   <div class="page-content">
 
   <!--Company info-->
-  <section class="row">
+  <section class="row contact-title-container">
     <article class="col-3">
         <h2>5000</h2>
         <h2>People employed</h2>
@@ -99,7 +99,7 @@
 
     <!--Our Story-->
     <section>
-        <article class="col-12">
+        <article class="col-12 contact-title-container">
             <h3>Our Story</h3>
             <p>Lorem ipsum dolor sit amet consectetur. Adipiscing rhoncus velit convallis odio pulvinar. Nibh lobortis nunc id proin sed. Cursus diam fringilla nibh volutpat at viverra eros turpis. Ullamcorper in eleifend amet facilisi accumsan bibendum lacus nibh. Velit purus a aliquam gravida neque nulla. </p>
             <p> Non hendrerit interdum vulputate commodo. Mattis commodo nulla porttitor dolor ultrices nec ut. Mattis mattis viverra netus morbi. Laoreet euismod nulla vitae dictumst a nibh. In feugiat molestie elementum phasellus neque. Interdum amet aliquet risus mi proin id vestibulum. Tortor a amet elementum ultrices facilisis neque ipsum feugiat. Sed metus adipiscing purus eget urna neque donec diam amet. Amet tellus amet imperdiet quam. Proin id venenatis tortor nec iaculis nibh. Dolor egestas orci varius habitasse tellus nam morbi ut. Proin donec non phasellus praesent non quis diam dignissim lectus. </p>
