--- a/company.html
+++ b/company.html
@@ -217,5 +217,8 @@
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+<!--JS Scripts-->
+<script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
+<script type="text/javascript" src="./assets/js/request.js"></script> <!--JSON API request JS-->
 
 </html>
