--- a/company.html
+++ b/company.html
@@ -217,5 +217,6 @@
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="./assets/js/script.js"></script> <!--JSON API request JS-->
 
 </html>
