--- a/contact.html
+++ b/contact.html
@@ -222,6 +222,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 <!--JS Scripts-->
 <script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
-<script type="text/javascript" src="./assets/js/request.js"></script> <!--JSON API request JS-->
+<script type="text/javascript" src="./assets/js/script.js"></script> <!--JSON API request JS-->
 
 </html>
